--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
 			<artifactId>jsp-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<!-- file upload configuration -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+		</dependency>
 		<!-- junit test -->
 		<dependency>
 			<groupId>junit</groupId>
